# website_to_okf

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_buffer.py  test_config.py  test_distill.py  test_okf.py  test_urls.py  test_viz.py
website_to_okf/: __init__.py  buffer.py  cli.py  config.py  discover.py  distill.py  engine.py  engine_crawl4ai.py  extract.py  fetch.py  models.py  okf.py  pipeline.py  urls.py  viz.py
